area/apps/standort/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standort
  namespace: standort
spec:
  selector:
    matchLabels:
      app: standort
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: standort
    spec:
      serviceAccountName: standort
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: konfig-volume
          configMap:
            name: konfig-config
        - name: standort-volume
          emptyDir: {}
        - name: otlp-volume
          secret:
            secretName: otlp-secret
      containers:
        - name: standort
          image: docker.io/alexfalkowski/standort:v2.89.0
          imagePullPolicy: Always
          args: ["server"]
          volumeMounts:
            - name: standort-volume
              mountPath: /etc/standort
            - name: otlp-volume
              mountPath: /etc/secrets/otlp
              readOnly: true
          ports:
            - containerPort: 8080
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              cpu: 125m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: standort
  namespace: standort
  labels:
    app: standort
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: grpc
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: standort
  type: ClusterIP
